--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/material": "^12.2.6",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/router": "~12.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
